# Trojan-Engine

./: CMakeLists.txt  README.md
assets/models/: curuthers.mtl
assets/shaders/: shader.frag  shader.vert
src/demo/: Player.cpp  Player.h  main.cpp
src/sys/: autoptr.h  base.h  config.h  criticalpin.h  exception.h  file.h  io.h  linkedlist.h  list.h  lock.h  memory.h  mutex.h  panic.h  ptr.h  string.h  vector.h  weakpin.h  weakptr.h  zero.h
src/sys/experimental/: atomic.h  directory.h  mutex.h  pipe.h  threadpool.h
src/trojan_engine/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Keyboard.cpp  Keyboard.h  Model.cpp  Model.h  NativeWindow.cpp  NativeWindow.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h  trojanEngine.h
src/trojan_engine/Components/: ModelRenderer.cpp  ModelRenderer.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h
src/trojan_engine/Resources/: Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
